# servos

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  build.rs  mkfs.py
.cargo/: config.toml
initrd/: 1001_A.txt  test.txt
initrd/bfp/: output_h.bf
kernel/: Cargo.toml  build.rs
kernel/src/: arr.rs  elf.rs  hart.rs  heap.rs  lib.rs  lock.rs  main.rs  power.rs  proc.rs  riscv.rs  sys.rs  trap.rs  uart.rs  vmm.rs
kernel/src/dev/: console.rs  mod.rs  null.rs  zero.rs
kernel/src/drivers/: mod.rs  ns16550.rs  syscon.rs
kernel/src/fs/: dev.rs  initrd.rs  mod.rs  path.rs  vfs.rs
kernel/src/sbi/: debug_console.rs  mod.rs  sys_reset.rs
kernel/src/vmm/: mod.rs  paging.rs  vaddr.rs
shared/: Cargo.toml
shared/src/: io.rs  lib.rs  sys.rs
src/: config.rs  dump_fdt.rs  hart.rs  heap.rs  kernel.ld  lib.rs  lock.rs  main.rs  ns16550.rs  plic.rs  proc.rs  riscv.rs  sys.rs  trap.rs  uart.rs  vmm.rs
src/drivers/: mod.rs  ns16550.rs  syscon.rs
src/fs/: arr.rs  initrd.rs  mod.rs  vfs.rs
src/sbi/: debug_console.rs  hsm.rs  mod.rs  raw.rs  timer.rs
user/bf/: Cargo.toml
user/bf/src/: bc.rs  main.rs
user/cat/: Cargo.toml
user/cat/src/: main.rs
user/coreutils/: Cargo.toml
user/echo/: Cargo.toml
user/echo/src/: main.rs
user/init/: Cargo.toml
user/init/src/: main.rs  print.rs  sys.rs
user/kill/: Cargo.toml
user/kill/src/: main.rs
user/ls/: Cargo.toml
user/ls/src/: main.rs
user/sh/: Cargo.toml
user/sh/src/: main.rs
user/shutdown/: Cargo.toml
user/shutdown/src/: main.rs
user/tests/: Cargo.toml
user/userstd/: Cargo.toml
(+6 files in other folders)
