[package]
name = "servos"
version = "0.1.0"
edition = "2021"

[dependencies]
concat-idents = "1.1.5"
lock_api = "0.4.12"
strum = { version = "0.26.3", features = ["derive"], default-features = false }
fdt-rs = { version = "0.4.5", default-features = false }
arrayvec = { version = "0.7.4", default-features = false }
linked_list_allocator = { version = "0.10.5", default-features = false }
either = { version = "1.13.0", default-features = false }
