[package]
name = "servos"
version = "0.1.0"
edition = "2021"

[dependencies]
concat-idents = "1.1.5"
strum = { version = "0.26.3", features = ["derive"], default-features = false }
fdt-rs = { version = "0.4.5", default-features = false }
linked_list_allocator = { version = "0.10.5", default-features = false }
bitflags = "2.6.0"
shared = { path = "../shared" }
